@@ -16,6 +16,7 @@
         <licensing.prepend.text>licensing/notice-gpl-prefix.txt</licensing.prepend.text>
         <moduleName>org.neo4j.dbms</moduleName>
         <default.jupiter.test.mode>concurrent</default.jupiter.test.mode>
+        <test.runner.jvm.settings.additional>-Djdk.attach.allowAttachSelf=true</test.runner.jvm.settings.additional>
     </properties>
 
     <description>
